[package]
name = "libun"
version = "0.1.0"
edition = "2018"

[features]
default = ["json", "age"]

json = ["serde_json"]

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
secrecy = "^0.7.0"

[dependencies.age]
version = "0.6.0"
optional = true

[dependencies.serde_json]
version = "1.0.59"
optional = true